[build-system]
requires      = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name            = "pydev_repl"
version         = "0.1.0"
description     = "TODO"
readme          = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license         = {text = "MIT"}

classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Interpreters",
]

dependencies = [
  "watchdog>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "numpy>=1.23",
  "ruff>=0.4",
  "yapf>=0.40",
  "argcomplete>=3.0",
]

[project.urls]
"Github" = "https://github.com/nextdorf/pydev-repl"
"PyPi"   = "https://pypi.org/project/pydev-repl"

[project.scripts]
pydev-repl = "pydev_repl.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["pydev_repl"]
license-files = ["LICENSE"]

[tool.hatch.version]
source = "vcs"
# optional: fallback if not on a tag
fallback-version = "0.0.0.dev0"

[tool.hatch.build]
include = [
  "pydev_repl/**/*.py",
  "pydev_repl/py.typed",
  "LICENSE",
  "tests/**/*.py",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
